--- a/InmobiliariaTp/gradle/libs.versions.toml
+++ b/InmobiliariaTp/gradle/libs.versions.toml
@@ -13,6 +13,10 @@ navigationUi = "2.9.5"
 retrofit = "2.11.0"
 converterGson = "2.11.0"
 legacySupportV4 = "1.0.0"
+recyclerview = "1.4.0"
+cardview = "1.0.0"
+compiler = "4.16.0"
+annotations = "4.16.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -28,6 +32,10 @@ navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "converterGson" }
 legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
+compiler = { group = "com.github.bumptech.glide", name = "compiler", version.ref = "compiler" }
+annotations = { group = "com.github.bumptech.glide", name = "annotations", version.ref = "annotations" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
